feat: implement shopping cart management (Task 6)
- Add Cart Server Actions with telegramId verification
  - addToCart: Add products with stock validation
  - updateCartItem: Update quantities with stock checks
  - removeFromCart: Remove items from cart
  - getCart: Retrieve cart with enriched product details
  - calculateCartTotal: Sum of all cart items
  - clearCart: Clear cart after checkout

- Build CartView component
  - Display cart items with product details
  - Quantity increment/decrement controls (touch-friendly)
  - Remove item functionality
  - Real-time total calculation
  - Stock validation and warnings
  - Empty cart state
  - Checkout button

- Add i18n translations for cart
  - English, Amharic, Afaan Oromo
  - Cart UI strings, actions, and messages
  - Stock warnings and error messages

Requirements: 6.1, 6.2, 6.3, 6.4, 6.5

--- a/src/locales/am/common.json
+++ b/src/locales/am/common.json
@@ -35,6 +35,10 @@
     "error": "ስህተት ተከስቷል",
     "success": "ተሳክቷል",
     "noResults": "ምንም ውጤት አልተገኘም",
-    "selectLanguage": "ቋንቋ ይምረጡ"
+    "selectLanguage": "ቋንቋ ይምረጡ",
+    "tryAgain": "እንደገና ይሞክሩ",
+    "remove": "አስወግድ",
+    "increase": "ጨምር",
+    "decrease": "ቀንስ"
   }
 }
