feat: implement Chapa payment integration (Task 9)
CRITICAL PAYMENT FLOW - Ethiopian Payment Gateway

Task 9.1: Chapa SDK and Configuration
- Create src/lib/payment/chapa.ts with full Chapa API integration
- initiateChapaPayment(): Create payment requests
- verifyPayment(): Verify transaction status
- validateWebhookSignature(): HMAC SHA256 signature validation
- processWebhookPayload(): Parse and validate webhooks
- initiateRefund(): Handle order cancellations
- Sandbox/Production mode support via CHAPA_MODE env var
- Comprehensive logging in sandbox mode for debugging

Task 9.2: Payment Initiation Server Action
- Create src/app/actions/payment.ts
- initiateChapaPaymentForOrder(): Secure payment initiation
  * Verify telegramId and order ownership
  * Validate order status (must be PENDING)
  * Calculate total (order + delivery fee)
  * Generate Chapa payment request
  * Return checkout URL for redirect
- getOrderPaymentStatus(): Check payment completion
- All actions verify user authentication

Task 9.3: Payment Webhook Handler (IDEMPOTENCY)
- Create src/app/api/webhooks/chapa/route.ts
- POST endpoint for Chapa callbacks
- Webhook signature validation (security)
- Firestore Transaction for atomic updates
- IDEMPOTENCY CHECK: Prevent double-crediting
  * Check if order already PAID_ESCROW or beyond
  * Return success without modification if already processed
- Update order status PENDING → PAID_ESCROW
- Amount verification (expected vs received)
- Comprehensive logging for debugging
- GET endpoint for health checks

Task 9.4: ChapaPaymentButton Component
- Touch-friendly payment button (44px minimum)
- Loading state during payment initiation
- Error handling with user feedback
- Sandbox mode indicator (Requirement 25.5)
- Redirect to Chapa checkout page
- Complete i18n translations (3 languages)

Security Features:
- Webhook signature validation (HMAC SHA256)
- Firestore Transactions for atomicity
- Idempotency checks prevent double-crediting
- Amount verification 

--- a/src/locales/am/errors.json
+++ b/src/locales/am/errors.json
@@ -27,5 +27,6 @@
   "payment": {
     "failed": "ክፍያ አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
     "cancelled": "ክፍያ ተሰርዟል"
-  }
+  },
+  "notAuthenticated": "ይህንን ድርጊት ለማከናወን መግባት አለብዎት"
 }
