--- a/src/locales/en/errors.json
+++ b/src/locales/en/errors.json
@@ -27,5 +27,6 @@
   "payment": {
     "failed": "Payment failed. Please try again.",
     "cancelled": "Payment was cancelled"
-  }
+  },
+  "notAuthenticated": "You must be logged in to perform this action"
 }
