feat: implement Order Lifecycle and Escrow State Machine (Task 10)
- Created Order Server Actions (createOrder, getOrderById, getUserOrders, getShopOrders, updateOrderStatus, validateOTP, cancelOrder)
- Implemented OTP generation and validation utilities with 6-digit codes and 3-attempt limit
- Implemented Escrow State Machine with transition validation and status descriptions
- Built OrderCheckout component for payment initiation
- Built OrderList and OrderDetail components for buyer order management
- Built ShopOrderList and ShopOrderDetail components for shop owner order fulfillment
- Built RunnerOrderView component for delivery management with OTP submission
- Added comprehensive i18n translations for order lifecycle (Amharic, Afaan Oromo, English)
- All state transitions use Firestore Transactions for atomicity
- Order creation includes stock validation and automatic cart clearing
- OTP validation releases escrow funds to shop balance on completion
- Order cancellation restores product stock and supports refund flow
- Requirements: 7.1-7.6, 9.1-9.6, 14.1-14.4, 17.1-17.6, 18.1-18.5, 23.1-23.5

--- a/src/locales/am/orders.json
+++ b/src/locales/am/orders.json
@@ -28,7 +28,39 @@
   "actions": {
     "cancelOrder": "ትዕዛዝ ሰርዝ",
     "trackOrder": "ትዕዛዝ ተከታተል",
-    "reorder": "እንደገና አዝዝ"
+    "reorder": "እንደገና አዝዝ",
+    "markDispatched": "እንደተላከ ምልክት አድርግ",
+    "markArrived": "እንደደረሰ ምልክት አድርግ",
+    "completeDelivery": "ማድረሻ አጠናቅቅ"
+  },
+  "cancellation": {
+    "title": "ትዕዛዝ ሰርዝ",
+    "reason": "የስረዛ ምክንያት",
+    "reasonPlaceholder": "እባክዎ የስረዛ ምክንያት ይስጡ...",
+    "confirm": "ስረዛ አረጋግጥ",
+    "keepOrder": "ትዕዛዝ ያቆዩ",
+    "refundNote": "ክፍያ ከተደረገ ተመላሽ ይደረጋል"
+  },
+  "shopOrders": {
+    "title": "የሱቅ ትዕዛዞች",
+    "earnings": "የእርስዎ ገቢ",
+    "earningsNote": "ትዕዛዝ ሲጠናቀቅ ገንዘብ ይለቀቃል",
+    "readyToDispatch": "ለመላክ ዝግጁ",
+    "deliveryInfo": "የማድረሻ መረጃ",
+    "itemsToPrepare": "ለማዘጋጀት እቃዎች",
+    "dispatchNote": "እቃዎችን ለማድረሻ ሰው ከሰጡ በኋላ ይጫኑ"
+  },
+  "runner": {
+    "deliveryDetails": "የማድረሻ ዝርዝሮች",
+    "destination": "መድረሻ",
+    "itemsToDeliver": "ለማድረስ እቃዎች",
+    "orderValue": "የትዕዛዝ ዋጋ",
+    "arrivedNote": "ወደ ማድረሻ ቦታ ሲደርሱ ይጫኑ",
+    "completeDelivery": "ማድረሻ አጠናቅቅ",
+    "askForCode": "ደንበኛውን ለ6-አሃዝ ማረጋገጫ ኮዳቸው ይጠይቁ",
+    "enterCode": "6-አሃዝ ኮድ ያስገቡ",
+    "deliveryCompleted": "ማድረሻ ተጠናቋል",
+    "thankYou": "ይህንን ማድረሻ ስላጠናቀቁ እናመሰግናለን!"
   },
   "empty": "ገና ምንም ትዕዛዝ የለም",
   "emptyDescription": "የመጀመሪያ ትዕዛዝዎን ለማድረግ ግዢ ይጀምሩ",
