feat: implement Mobile Optimization, Telegram Integration, and Notification System (Tasks 16-17)
Task 16: Mobile Optimization and Telegram Integration
- Task 16.1: Telegram Mini App SDK integration
  * Enhanced TelegramAuthProvider with haptic feedback support
  * Added viewport height tracking and adaptation
  * Implemented expand() for full viewport usage
  * Created haptic feedback utilities and patterns
  * Added viewport adaptation utilities
  * Created ViewportAdapter component
  * Updated ChapaPaymentButton and ProductCard with haptic feedback

- Task 16.2: Image optimization for mobile networks
  * Created OptimizedImage component with Next.js Image
  * Added ProductImage and ThumbnailImage specialized components
  * Enhanced image compression with WebP support
  * Added responsive image size generation
  * Configured Next.js for AVIF/WebP formats
  * Added image caching headers (30 days)
  * Implemented lazy loading and quality optimization

- Task 16.3: Touch-friendly UI elements
  * Enhanced Tailwind config with touch-target utilities
  * Added touch-target size constants (44px minimum)
  * Created touch-target verification utilities
  * Added touch-no-select and touch-active utilities
  * Implemented touch target audit tools for development

Task 17: Notifications and Status Updates
- Task 17.1: Notification system implementation
  * Created notification types and templates
  * Implemented notification service with multi-language support
  * Added notifications for order status changes:
    - ORDER_DISPATCHED (Requirement 9.3)
    - ORDER_ARRIVED with OTP (Requirement 9.5)
    - ORDER_CANCELLED to shop owners (Requirement 18.4)
    - ORDER_COMPLETED
    - PAYMENT_SUCCESS
    - PAYMENT_FAILED
  * Integrated notifications into order actions
  * Created notification Server Actions (get, mark as read, unread count)
  * Built NotificationList component
  * Added notification translations (Amharic, Afaan Oromo, English)

Requirements Satisfied:
- 9.3: Send not

--- a/src/locales/am/common.json
+++ b/src/locales/am/common.json
@@ -15,7 +15,8 @@
     "cart": "ጋሪ",
     "orders": "ትዕዛዞች",
     "profile": "መገለጫ",
-    "dashboard": "ዳሽቦርድ"
+    "dashboard": "ዳሽቦርድ",
+    "notifications": "ማሳወቂያዎች"
   },
   "actions": {
     "save": "አስቀምጥ",
@@ -39,6 +40,39 @@
     "tryAgain": "እንደገና ይሞክሩ",
     "remove": "አስወግድ",
     "increase": "ጨምር",
-    "decrease": "ቀንስ"
+    "decrease": "ቀንስ",
+    "justNow": "አሁን",
+    "minutesAgo": "ደቂቃ በፊት",
+    "hoursAgo": "ሰዓት በፊት",
+    "daysAgo": "ቀን በፊት"
+  },
+  "notifications": {
+    "title": "ማሳወቂያዎች",
+    "noNotifications": "ምንም ማሳወቂያ የለም",
+    "markAllAsRead": "ሁሉንም እንደተነበበ ምልክት አድርግ",
+    "orderDispatched": {
+      "title": "ትዕዛዝ ተልኳል",
+      "message": "ትዕዛዝዎ ተልኳል እና በመንገድ ላይ ነው!"
+    },
+    "orderArrived": {
+      "title": "ትዕዛዝ ደርሷል",
+      "message": "ትዕዛዝዎ ደርሷል! እባክዎ ምርቱን ይመርምሩ እና OTP ያቅርቡ።"
+    },
+    "orderCancelled": {
+      "title": "ትዕዛዝ ተሰርዟል",
+      "message": "ትዕዛዝዎ ተሰርዟል።"
+    },
+    "orderCompleted": {
+      "title": "ትዕዛዝ ተጠናቋል",
+      "message": "ትዕዛዝዎ ተጠናቋል። ስለገዙ እናመሰግናለን!"
+    },
+    "paymentSuccess": {
+      "title": "ክፍያ ተሳክቷል",
+      "message": "ክፍያዎ ተሳክቷል።"
+    },
+    "paymentFailed": {
+      "title": "ክፍያ አልተሳካም",
+      "message": "ክፍያዎ አልተሳካም። እባክዎ እንደገና ይሞክሩ።"
+    }
   }
 }
