--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -15,7 +15,8 @@
     "cart": "Cart",
     "orders": "Orders",
     "profile": "Profile",
-    "dashboard": "Dashboard"
+    "dashboard": "Dashboard",
+    "notifications": "Notifications"
   },
   "actions": {
     "save": "Save",
@@ -39,6 +40,39 @@
     "tryAgain": "Try Again",
     "remove": "Remove",
     "increase": "Increase",
-    "decrease": "Decrease"
+    "decrease": "Decrease",
+    "justNow": "Just now",
+    "minutesAgo": "m ago",
+    "hoursAgo": "h ago",
+    "daysAgo": "d ago"
+  },
+  "notifications": {
+    "title": "Notifications",
+    "noNotifications": "No notifications yet",
+    "markAllAsRead": "Mark all as read",
+    "orderDispatched": {
+      "title": "Order Dispatched",
+      "message": "Your order has been dispatched and is on its way!"
+    },
+    "orderArrived": {
+      "title": "Order Arrived",
+      "message": "Your order has arrived! Please inspect the product and provide the OTP."
+    },
+    "orderCancelled": {
+      "title": "Order Cancelled",
+      "message": "Your order has been cancelled."
+    },
+    "orderCompleted": {
+      "title": "Order Completed",
+      "message": "Your order has been completed. Thank you for your purchase!"
+    },
+    "paymentSuccess": {
+      "title": "Payment Successful",
+      "message": "Your payment was successful."
+    },
+    "paymentFailed": {
+      "title": "Payment Failed",
+      "message": "Your payment failed. Please try again."
+    }
   }
 }
